2006-04-07  Andrew Cagney  <cagney@redhat.com>

	* TestLib.java (killDuringTearDown): Rename registerChild.
	(tearDown): Log the task kill.
	* TestSyscallOpen.java: Update.
	* TestSyscall.java: Update.
	* TestSyscall2.java: Update.
	* TestModify.java: Update.
	* TestI386Modify.java: Update.
	* TestI386Regs.java: Update.

2006-04-06  Andrew Cagney  <cagney@redhat.com>

	* TaskState.java, ProcState.java: Rename "unattached" to
	"detached". Make states final.
	* TestRefresh.java: Update.
	* Task.java: Update.

2006-04-06  Adam Jocksch  <ajocksch@redhat.com>

	* Isa.java: Made public.
	(RegisterIterator): Ditto.
	(getRegisterByName): Ditto.

2006-04-05  Andrew Cagney  <cagney@redhat.com>

	* TestSyscallOpen.java: Skip.
	* TestSyscall.java: Skip.
	* TestSyscallInterrupt.java: Skip.
	* TestModify.java: Skip.
	* TestI386Regs.java: Skip.
	* TestI386Modify.java: Skip.

2006-03-28  Stan Cox  <scox@redhat.com>

	* TaskState.java (attaching): Handle handleTerminatedEvent.

2006-03-26  Andrew Cagney  <cagney@redhat.com>

	* TestTaskObserverDetach.java: Check that the ack signal, after a
	fork, clone, or exec, is received.
	* TestTaskObserver.java (detach): Add boolean shouldStillHaveTasks
	making the check for tasks conditional.
	(detachExitingTask): Do not expect any tasks after the detach.
	* TestLib.java (await): Add String, aka reason, parameter.
	(execAck, spawnAck): New.
	(tearDown): Re-implement pehding signal code, to assert that tere
	are no bad pending signals.
	* TaskState.java: When in detaching state, skip terminating,
	terminated, fork, exec, and clone events.

2006-03-25  Andrew Cagney  <cagney@redhat.com>

	* TaskState.java (running, destroyed): Handle handleDelete.
	* TaskObservation.java (handleDelete): Pass request onto the task.

	* Host.java (oldState, newState, getState): Replace state.
	* Proc.java (oldState, newState, getState): Replace state.
	* Task.java (toString): Clean up.
	
	* TaskState.java, ProcState.java, HostState.java: Make "handle"